--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:200');
+
 html, body {
   margin: 0;
   padding: 0;
@@ -7,13 +9,6 @@ html, body {
 
 .container {
   position: relative;
-}
-
-.content {
-  position: absolute;
-  left: 50vw;
-  top: 50vh;
-  background-color: red;
 }
 
 .background-image {
@@ -26,7 +21,37 @@ html, body {
   -webkit-background-size: cover; /* pour anciens Chrome et Safari */
   -moz-background-size: cover;  /* Mozilla */
   -o-background-size: cover;
-
   height: 100vh;
+}
 
+.content {
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  width:1000px; /* Assign a value */
+  height:300px; /* Assign a value */
+  margin:auto;
+  text-align: center;
+  /*background-color: red;*/
+}
+
+.content > #content-title {
+  font-family: Raleway, sans-serif;
+  font-style: light;
+  color: #455A64;
+  font-size: 3em;
+}
+
+.content > #lookfor-btn {
+  width: 400px;
+  height: 100px;
+  font-family: Raleway, sans-serif;
+  font-size: 1.5em;
+  padding: 0;
+  border: none;
+  background-color: #455A64;
+  color: #ffff;
+  cursor: pointer;
 }
