--- a/style.css
+++ b/style.css
@@ -18,8 +18,16 @@ html, body {
   position: relative;
 }
 
-.background-image {
+#welcome {
   background-image: url('welcome-background.jpg');
+}
+
+#index {
+  background-image: url('index-background.jpg');
+}
+
+.background-image {
+  /*background-image: url('welcome-background.jpg');*/
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -41,7 +49,6 @@ html, body {
   height:300px; /* Assign a value */
   margin:auto;
   text-align: center;
-  /*background-color: red;*/
 }
 
 .content > #content-title {
@@ -49,8 +56,8 @@ html, body {
   font-style: light;
   color: #455A64;
   font-size: 3em;
-  /*opacity: 0;*/
-  /*filter: alpha(opacity=0);*/
+  opacity: 0;
+  filter: alpha(opacity=0);
 }
 
 .content > #lookfor-btn {
@@ -64,10 +71,10 @@ html, body {
   color: #ffff;
   cursor: pointer;
   outline: none;
-  /*opacity: 0;*/
+  opacity: 0;
 }
 
-/*.content > #lookfor-btn:hover {
-  background-color: #51636c;
-  transform: scale(1.2);
-}*/
+.content > #lookfor-btn:hover {  /* temporaly */
+  background-color: #B2DFDB;
+  box-shadow: 6px 6px 14px 1px rgba(82, 82, 82, 0.2);
+}
